Breid site uit met extra pagina's en gedeelde header

--- a/bestel.html
+++ b/bestel.html
@@ -997,9 +997,14 @@
 
             <nav class="header-nav">
                 <a href="index.html">Home</a>
-                <a href="#assortiment">Assortiment</a>
-                <a href="#bezorging">Bezorging</a>
-                <a href="#contact">Contact</a>
+                <a href="assortiment.html">Assortiment</a>
+                <a href="brood.html">Brood</a>
+                <a href="banket.html">Banket</a>
+                <a href="taarten.html">Taarten</a>
+                <a href="belegde-broodjes.html">Belegde broodjes</a>
+                <a href="bezorging.html">Bezorging</a>
+                <a href="over-ons.html">Over ons</a>
+                <a href="contact.html">Contact</a>
             </nav>
 
             <div class="header-actions">
@@ -1157,23 +1162,23 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h4>Assortiment</h4>
-                    <a href="#">Broodjes</a>
-                    <a href="#">Brood</a>
-                    <a href="#">Pistolets</a>
-                    <a href="#">Banket</a>
-                    <a href="#">Taarten</a>
+                    <a href="belegde-broodjes.html">Broodjes</a>
+                    <a href="brood.html">Brood</a>
+                    <a href="assortiment.html">Pistolets</a>
+                    <a href="banket.html">Banket</a>
+                    <a href="taarten.html">Taarten</a>
                 </div>
                 <div class="footer-section">
                     <h4>Klantenservice</h4>
-                    <a href="#">Contact</a>
-                    <a href="#">Bezorginformatie</a>
-                    <a href="#">Betaalmethodes</a>
+                    <a href="contact.html">Contact</a>
+                    <a href="bezorging.html">Bezorginformatie</a>
+                    <a href="allergenen.html">Allergenen</a>
                 </div>
                 <div class="footer-section">
                     <h4>Over De Korenaar</h4>
-                    <a href="#">Over ons</a>
-                    <a href="#">Onze bakkerij</a>
-                    <a href="#">Ambacht</a>
+                    <a href="over-ons.html">Over ons</a>
+                    <a href="over-ons.html#bakkerij">Onze bakkerij</a>
+                    <a href="over-ons.html#ambacht">Ambacht</a>
                 </div>
                 <div class="footer-section" id="contact">
                     <h4>Contact</h4>
