Update navigation dropdowns and company imagery

--- a/assortiment.html
+++ b/assortiment.html
@@ -89,15 +89,35 @@
             </a>
 
             <nav class="header-nav">
-                <a href="index.html">Home</a>
-                <a href="assortiment.html">Assortiment</a>
-                <a href="brood.html">Brood</a>
-                <a href="banket.html">Banket</a>
-                <a href="taarten.html">Taarten</a>
-                <a href="belegde-broodjes.html">Belegde broodjes</a>
-                <a href="bezorging.html">Bezorging</a>
-                <a href="over-ons.html">Over ons</a>
-                <a href="contact.html">Contact</a>
+                <div class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </div>
+                <div class="nav-item has-dropdown">
+                    <a class="nav-link" href="assortiment.html">Assortiment <i class="fas fa-chevron-down"></i></a>
+                    <div class="dropdown-menu">
+                        <a href="brood.html">Brood</a>
+                        <a href="banket.html">Banket</a>
+                        <a href="taarten.html">Taarten</a>
+                        <a href="belegde-broodjes.html">Belegde broodjes</a>
+                    </div>
+                </div>
+                <div class="nav-item has-dropdown">
+                    <a class="nav-link" href="bestel.html">Bestellen <i class="fas fa-chevron-down"></i></a>
+                    <div class="dropdown-menu">
+                        <a href="bezorging.html">Bezorging</a>
+                    </div>
+                </div>
+                <div class="nav-item has-dropdown">
+                    <a class="nav-link" href="over-ons.html">Over ons <i class="fas fa-chevron-down"></i></a>
+                    <div class="dropdown-menu">
+                        <a href="over-ons.html">Onze bakkerij</a>
+                        <a href="zakelijk.html">Zakelijk</a>
+                        <a href="allergenen.html">Allergenen</a>
+                    </div>
+                </div>
+                <div class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </div>
             </nav>
 
             <div class="header-actions">
@@ -134,7 +154,7 @@
                 </div>
                 <div class="card-grid">
                     <article class="category-card">
-                        <img src="https://images.unsplash.com/photo-1509440159596-0249088772ff?w=1200&h=800&fit=crop" alt="Brood assortiment">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/4/4c/Bakkerij_De_Korenaar._Surhuisterveen.JPG" alt="Brood assortiment">
                         <div class="category-card-content">
                             <h3>Brood & desem</h3>
                             <p>Meergranen, volkoren, desem en glutenvrije varianten.</p>
@@ -142,7 +162,7 @@
                         </div>
                     </article>
                     <article class="category-card">
-                        <img src="https://images.unsplash.com/photo-1555507036-ab1f4038808a?w=1200&h=800&fit=crop" alt="Banket assortiment">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/4/4c/Bakkerij_De_Korenaar._Surhuisterveen.JPG" alt="Banket assortiment">
                         <div class="category-card-content">
                             <h3>Banket & lekkernijen</h3>
                             <p>Koek, gebak en seizoensspecials met roomboter.</p>
@@ -150,7 +170,7 @@
                         </div>
                     </article>
                     <article class="category-card">
-                        <img src="https://images.unsplash.com/photo-1578985545062-69928b1d9587?w=1200&h=800&fit=crop" alt="Taarten assortiment">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/4/4c/Bakkerij_De_Korenaar._Surhuisterveen.JPG" alt="Taarten assortiment">
                         <div class="category-card-content">
                             <h3>Taarten op maat</h3>
                             <p>Van klassieke slagroomtaarten tot luxe chocolade.</p>
@@ -158,7 +178,7 @@
                         </div>
                     </article>
                     <article class="category-card">
-                        <img src="https://images.unsplash.com/photo-1509722747041-616f39b57569?w=1200&h=800&fit=crop" alt="Belegde broodjes">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/4/4c/Bakkerij_De_Korenaar._Surhuisterveen.JPG" alt="Belegde broodjes">
                         <div class="category-card-content">
                             <h3>Belegde broodjes</h3>
                             <p>Vers belegd met kaas, vleeswaren of vega opties.</p>
