--- a/banket.html
+++ b/banket.html
@@ -75,15 +75,35 @@
             </a>
 
             <nav class="header-nav">
-                <a href="index.html">Home</a>
-                <a href="assortiment.html">Assortiment</a>
-                <a href="brood.html">Brood</a>
-                <a href="banket.html">Banket</a>
-                <a href="taarten.html">Taarten</a>
-                <a href="belegde-broodjes.html">Belegde broodjes</a>
-                <a href="bezorging.html">Bezorging</a>
-                <a href="over-ons.html">Over ons</a>
-                <a href="contact.html">Contact</a>
+                <div class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </div>
+                <div class="nav-item has-dropdown">
+                    <a class="nav-link" href="assortiment.html">Assortiment <i class="fas fa-chevron-down"></i></a>
+                    <div class="dropdown-menu">
+                        <a href="brood.html">Brood</a>
+                        <a href="banket.html">Banket</a>
+                        <a href="taarten.html">Taarten</a>
+                        <a href="belegde-broodjes.html">Belegde broodjes</a>
+                    </div>
+                </div>
+                <div class="nav-item has-dropdown">
+                    <a class="nav-link" href="bestel.html">Bestellen <i class="fas fa-chevron-down"></i></a>
+                    <div class="dropdown-menu">
+                        <a href="bezorging.html">Bezorging</a>
+                    </div>
+                </div>
+                <div class="nav-item has-dropdown">
+                    <a class="nav-link" href="over-ons.html">Over ons <i class="fas fa-chevron-down"></i></a>
+                    <div class="dropdown-menu">
+                        <a href="over-ons.html">Onze bakkerij</a>
+                        <a href="zakelijk.html">Zakelijk</a>
+                        <a href="allergenen.html">Allergenen</a>
+                    </div>
+                </div>
+                <div class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </div>
             </nav>
 
             <div class="header-actions">
