--- a/index.html
+++ b/index.html
@@ -457,15 +457,35 @@
                 <img src="https://bakeronline-paris.s3.eu-west-3.amazonaws.com/website-pages/766/de-korenaar-logo-zij-naamsindruk-diap-1.png" alt="De Korenaar" class="logo">
             </a>
             <nav class="header-nav">
-                <a href="index.html">Home</a>
-                <a href="assortiment.html">Assortiment</a>
-                <a href="brood.html">Brood</a>
-                <a href="banket.html">Banket</a>
-                <a href="taarten.html">Taarten</a>
-                <a href="belegde-broodjes.html">Belegde broodjes</a>
-                <a href="bezorging.html">Bezorging</a>
-                <a href="over-ons.html">Over ons</a>
-                <a href="contact.html">Contact</a>
+                <div class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </div>
+                <div class="nav-item has-dropdown">
+                    <a class="nav-link" href="assortiment.html">Assortiment <i class="fas fa-chevron-down"></i></a>
+                    <div class="dropdown-menu">
+                        <a href="brood.html">Brood</a>
+                        <a href="banket.html">Banket</a>
+                        <a href="taarten.html">Taarten</a>
+                        <a href="belegde-broodjes.html">Belegde broodjes</a>
+                    </div>
+                </div>
+                <div class="nav-item has-dropdown">
+                    <a class="nav-link" href="bestel.html">Bestellen <i class="fas fa-chevron-down"></i></a>
+                    <div class="dropdown-menu">
+                        <a href="bezorging.html">Bezorging</a>
+                    </div>
+                </div>
+                <div class="nav-item has-dropdown">
+                    <a class="nav-link" href="over-ons.html">Over ons <i class="fas fa-chevron-down"></i></a>
+                    <div class="dropdown-menu">
+                        <a href="over-ons.html">Onze bakkerij</a>
+                        <a href="zakelijk.html">Zakelijk</a>
+                        <a href="allergenen.html">Allergenen</a>
+                    </div>
+                </div>
+                <div class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </div>
             </nav>
             <div class="header-actions">
                 <a href="tel:0512361262" class="header-btn btn-secondary">
@@ -497,7 +517,7 @@
                 </div>
             </div>
             <div class="hero-card">
-                <img src="https://images.unsplash.com/photo-1549931319-a545dcf3bc73?w=1200&h=800&fit=crop" alt="Vers gebakken brood">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/4/4c/Bakkerij_De_Korenaar._Surhuisterveen.JPG" alt="Vers gebakken brood">
                 <div class="hero-card-content">
                     <h3>Waarom klanten terugkomen</h3>
                     <ul>
@@ -518,7 +538,7 @@
             </div>
             <div class="highlight-grid">
                 <article class="highlight-card">
-                    <img src="https://images.unsplash.com/photo-1509440159596-0249088772ff?w=1200&h=800&fit=crop" alt="Dagvers brood">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/4/4c/Bakkerij_De_Korenaar._Surhuisterveen.JPG" alt="Dagvers brood">
                     <div class="highlight-card-content">
                         <h4>Dagvers brood</h4>
                         <p>Krokant van buiten, zacht van binnen. Kies uit volkoren, desem en meergranen.</p>
@@ -526,7 +546,7 @@
                     </div>
                 </article>
                 <article class="highlight-card">
-                    <img src="https://images.unsplash.com/photo-1555507036-ab1f4038808a?w=1200&h=800&fit=crop" alt="Banket">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/4/4c/Bakkerij_De_Korenaar._Surhuisterveen.JPG" alt="Banket">
                     <div class="highlight-card-content">
                         <h4>Banket & lekkernijen</h4>
                         <p>Roomboterkoek, croissants en seizoensspecials die je dag maken.</p>
@@ -534,7 +554,7 @@
                     </div>
                 </article>
                 <article class="highlight-card">
-                    <img src="https://images.unsplash.com/photo-1578985545062-69928b1d9587?w=1200&h=800&fit=crop" alt="Taarten">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/4/4c/Bakkerij_De_Korenaar._Surhuisterveen.JPG" alt="Taarten">
                     <div class="highlight-card-content">
                         <h4>Taarten op maat</h4>
                         <p>Van klassiek slagroom tot luxe chocolade. Ideaal voor elke gelegenheid.</p>
@@ -542,7 +562,7 @@
                     </div>
                 </article>
                 <article class="highlight-card">
-                    <img src="https://images.unsplash.com/photo-1509722747041-616f39b57569?w=1200&h=800&fit=crop" alt="Belegde broodjes">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/4/4c/Bakkerij_De_Korenaar._Surhuisterveen.JPG" alt="Belegde broodjes">
                     <div class="highlight-card-content">
                         <h4>Belegde broodjes</h4>
                         <p>Vers belegd en snel klaar. Perfect voor lunch of een meeting.</p>
