--- a/taarten.html
+++ b/taarten.html
@@ -85,15 +85,35 @@
             </a>
 
             <nav class="header-nav">
-                <a href="index.html">Home</a>
-                <a href="assortiment.html">Assortiment</a>
-                <a href="brood.html">Brood</a>
-                <a href="banket.html">Banket</a>
-                <a href="taarten.html">Taarten</a>
-                <a href="belegde-broodjes.html">Belegde broodjes</a>
-                <a href="bezorging.html">Bezorging</a>
-                <a href="over-ons.html">Over ons</a>
-                <a href="contact.html">Contact</a>
+                <div class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </div>
+                <div class="nav-item has-dropdown">
+                    <a class="nav-link" href="assortiment.html">Assortiment <i class="fas fa-chevron-down"></i></a>
+                    <div class="dropdown-menu">
+                        <a href="brood.html">Brood</a>
+                        <a href="banket.html">Banket</a>
+                        <a href="taarten.html">Taarten</a>
+                        <a href="belegde-broodjes.html">Belegde broodjes</a>
+                    </div>
+                </div>
+                <div class="nav-item has-dropdown">
+                    <a class="nav-link" href="bestel.html">Bestellen <i class="fas fa-chevron-down"></i></a>
+                    <div class="dropdown-menu">
+                        <a href="bezorging.html">Bezorging</a>
+                    </div>
+                </div>
+                <div class="nav-item has-dropdown">
+                    <a class="nav-link" href="over-ons.html">Over ons <i class="fas fa-chevron-down"></i></a>
+                    <div class="dropdown-menu">
+                        <a href="over-ons.html">Onze bakkerij</a>
+                        <a href="zakelijk.html">Zakelijk</a>
+                        <a href="allergenen.html">Allergenen</a>
+                    </div>
+                </div>
+                <div class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </div>
             </nav>
 
             <div class="header-actions">
@@ -130,7 +150,7 @@
                 </div>
                 <div class="cake-grid">
                     <article class="cake-card">
-                        <img src="https://images.unsplash.com/photo-1578985545062-69928b1d9587?w=1200&h=800&fit=crop" alt="Slagroomtaart">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/4/4c/Bakkerij_De_Korenaar._Surhuisterveen.JPG" alt="Slagroomtaart">
                         <div class="cake-card-content">
                             <h3>Slagroomklassieker</h3>
                             <p>Luchtige slagroom, verse aardbeien en zachte cake.</p>
@@ -138,7 +158,7 @@
                         </div>
                     </article>
                     <article class="cake-card">
-                        <img src="https://images.unsplash.com/photo-1486427944299-d1955d23e34d?w=1200&h=800&fit=crop" alt="Chocoladetaart">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/4/4c/Bakkerij_De_Korenaar._Surhuisterveen.JPG" alt="Chocoladetaart">
                         <div class="cake-card-content">
                             <h3>Chocolade luxe</h3>
                             <p>Voor liefhebbers van pure chocolade en rijke vulling.</p>
@@ -146,7 +166,7 @@
                         </div>
                     </article>
                     <article class="cake-card">
-                        <img src="https://images.unsplash.com/photo-1505253216365-0fa7f77e25c2?w=1200&h=800&fit=crop" alt="Fruitige taart">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/4/4c/Bakkerij_De_Korenaar._Surhuisterveen.JPG" alt="Fruitige taart">
                         <div class="cake-card-content">
                             <h3>Fruitig & fris</h3>
                             <p>Seizoensfruit, lichte room en een krokante bodem.</p>
